Add adding ingredient to bar
